Fix overflow

--- a/index.css
+++ b/index.css
@@ -53,7 +53,7 @@ main > * {
 }
 
 main > :not(h2),
-footer > * {
+footer > :not(input) {
 	width: 100%;
 	max-width: 500px;
 	margin-left: auto;
@@ -194,7 +194,7 @@ input[type="url"],
 	padding: 0.5em;
 	border: solid;
 	border-radius: 0.5em;
-	margin: 0.5em;
+	margin: 0.5em 0;
 	font: inherit;
 	text-align: center;
 	max-width: 100%;
